tests/error/tracing_errors/bad_unary.py
from guppylang.decorator import guppy


@guppy.comptime
def test(x: float) -> float:
    return ~x


guppy.compile(test)
