tests/error/tracing_errors/bad_unary.err
Traceback (most recent call last):
  File "$FILE", line 12, in <module>
    module.compile()
  File "$FILE", line 9, in test
    return ~x
           ^^
TypeError: Operator not defined: Unary operator `~` not defined for `float`
